Adição da tela de Inserir Usuario

--- a/vinil_qt/mainwindow.ui
+++ b/vinil_qt/mainwindow.ui
@@ -27,6 +27,19 @@
      <string>IR TELA LOGIN </string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>240</y>
+      <width>221</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>INSERIR USUARIO</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
