--- a/vinil_qt/mainwindow.ui
+++ b/vinil_qt/mainwindow.ui
@@ -6,38 +6,71 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1024</width>
+    <height>768</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>200</y>
-      <width>351</width>
-      <height>24</height>
+      <x>330</x>
+      <y>290</y>
+      <width>361</width>
+      <height>40</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Microsoft YaHei UI</family>
+      <pointsize>14</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(254, 104, 50);
+border-style: outset;
+color:rgb(255, 255, 255)</string>
     </property>
     <property name="text">
      <string>IR TELA LOGIN </string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="btnNovaConta">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>240</y>
-      <width>221</width>
-      <height>24</height>
+      <x>330</x>
+      <y>350</y>
+      <width>361</width>
+      <height>40</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>Microsoft YaHei UI</family>
+      <pointsize>14</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(175, 131, 115);
+border-style: outset;
+color:rgb(255, 255, 255)</string>
+    </property>
     <property name="text">
-     <string>INSERIR USUARIO</string>
+     <string>NOVA CONTA</string>
     </property>
    </widget>
   </widget>
@@ -46,7 +79,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1024</width>
      <height>21</height>
     </rect>
    </property>
