Correções e adição de imagem em screen_disc

--- a/vinil_qt/screen_disc.ui
+++ b/vinil_qt/screen_disc.ui
@@ -167,7 +167,7 @@ font: 700 12pt &quot;Microsoft YaHei UI&quot;;</string>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="lb_imagem">
     <property name="geometry">
      <rect>
       <x>60</x>
