--- a/vinil_qt/screen_profile.ui
+++ b/vinil_qt/screen_profile.ui
@@ -186,7 +186,7 @@ color:rgb(255, 255, 255)</string>
      <string>RANK!</string>
     </property>
    </widget>
-   <widget class="QLabel" name="lb_ano_lancamento_4">
+   <widget class="QLabel" name="lb_txt_rank">
     <property name="geometry">
      <rect>
       <x>20</x>
