--- a/vinil_qt/screen_new_account.ui
+++ b/vinil_qt/screen_new_account.ui
@@ -19,8 +19,8 @@
   <widget class="QPushButton" name="pb_inserir">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>490</y>
+     <x>350</x>
+     <y>600</y>
      <width>100</width>
      <height>30</height>
     </rect>
@@ -96,7 +96,7 @@ color:rgb(255, 255, 255)</string>
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>400</y>
+     <y>500</y>
      <width>251</width>
      <height>30</height>
     </rect>
@@ -118,8 +118,8 @@ color:rgb(255, 255, 255)</string>
   <widget class="QPushButton" name="pb_inserir_2">
    <property name="geometry">
     <rect>
-     <x>620</x>
-     <y>490</y>
+     <x>470</x>
+     <y>600</y>
      <width>100</width>
      <height>30</height>
     </rect>
@@ -252,7 +252,7 @@ border-style: outset;</string>
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>360</y>
+     <y>450</y>
      <width>250</width>
      <height>40</height>
     </rect>
@@ -278,7 +278,7 @@ border-style: outset;</string>
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>330</y>
+     <y>420</y>
      <width>251</width>
      <height>30</height>
     </rect>
@@ -301,7 +301,7 @@ border-style: outset;</string>
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>430</y>
+     <y>540</y>
      <width>250</width>
      <height>40</height>
     </rect>
@@ -323,7 +323,80 @@ border-style: outset;</string>
     <enum>QLineEdit::Password</enum>
    </property>
   </widget>
+  <widget class="QLineEdit" name="ln_email">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>370</y>
+     <width>250</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="cursor">
+    <cursorShape>IBeamCursor</cursorShape>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(200, 200, 200);
+border-color: rgb(200, 200, 200);
+border-style: outset;</string>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_12">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>340</y>
+     <width>251</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Microsoft YaHei UI</family>
+     <pointsize>12</pointsize>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_13">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>340</y>
+     <width>251</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Microsoft YaHei UI</family>
+     <pointsize>12</pointsize>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);</string>
+   </property>
+   <property name="text">
+    <string>EMAIL</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
 </ui>
+
