--- a/vinil_qt/screen_new_account.ui
+++ b/vinil_qt/screen_new_account.ui
@@ -346,7 +346,7 @@ border-color: rgb(200, 200, 200);
 border-style: outset;</string>
    </property>
    <property name="echoMode">
-    <enum>QLineEdit::Password</enum>
+    <enum>QLineEdit::Normal</enum>
    </property>
   </widget>
   <widget class="QLabel" name="label_12">
@@ -399,4 +399,3 @@ border-style: outset;</string>
  <resources/>
  <connections/>
 </ui>
-
